lesson9SkatingRing